Изменения в структуре подменю каталога товаров

--- a/catalog.html
+++ b/catalog.html
@@ -26,12 +26,18 @@
             <button class="main-nav-submenu-open main-nav-item label" type="button">Каталог товаров</button>
             <div class="main-nav-submenu">
               <ul>
-                <li><a href="#">Виртуальная реальность</a></li>
-                <li><a href="#">Моноподы для селфи</a></li>
-                <li><a href="#">Экшн-камеры</a></li>
-                <li><a href="#">Фитнес-браслеты</a></li>
-                <li><a href="#">Умные часы</a></li>
-                <li><a href="#">Квадрокоптеры</a></li>
+                <li class="main-nav-submenu-column">
+                  <a href="#">Виртуальная реальность</a>
+                  <a href="#">Моноподы для селфи</a>
+                  <a href="#">Экшн-камеры</a>
+                </li>
+                <li class="main-nav-submenu-column">
+                  <a href="#">Фитнес-браслеты</a>
+                  <a href="#">Умные часы</a>
+                </li>
+                <li class="main-nav-submenu-column">
+                  <a href="#">Квадрокоптеры</a>
+                </li>
               </ul>
             </div>
           </li>
