--- a/index.html
+++ b/index.html
@@ -22,16 +22,24 @@
       <nav class="main-nav">
         <ul>
           <li class="logo"><img src="img/logo.svg" width="163" height="35" alt="Device"></li>
-          <li class="main-nav-submenu">
+          <li>
             <button class="main-nav-submenu-open label" type="button">Каталог товаров</button>
-            <ul>
-              <li><a href="#">Виртуальная реальность</a></li>
-              <li><a href="#">Моноподы для селфи</a></li>
-              <li><a href="#">Экшн-камеры</a></li>
-              <li><a href="#">Фитнес-браслеты</a></li>
-              <li><a href="#">Умные часы</a></li>
-              <li><a href="#">Квадрокоптеры</a></li>
-            </ul>
+            <div class="main-nav-submenu">
+              <ul>
+                <li class="main-nav-submenu-column">
+                  <a href="#">Виртуальная реальность</a>
+                  <a href="#">Моноподы для селфи</a>
+                  <a href="#">Экшн-камеры</a>
+                </li>
+                <li class="main-nav-submenu-column">
+                  <a href="#">Фитнес-браслеты</a>
+                  <a href="#">Умные часы</a>
+                </li>
+                <li class="main-nav-submenu-column">
+                  <a href="#">Квадрокоптеры</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="label"><a href="#">Доставка</a></li>
           <li class="label"><a href="#">Гарантия</a></li>
