Правки по сетке

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <input class="visually-hidden" type="radio" name="slider-switch" id="product-1" checked>
     <input class="visually-hidden" type="radio" name="slider-switch" id="product-2">
     <input class="visually-hidden" type="radio" name="slider-switch" id="product-3">
-    <div class="slider-switch">
+    <div class="product-slider-switch">
       <label for="product-1">1</label>
       <label for="product-2">2</label>
       <label for="product-3">3</label>
@@ -162,10 +162,10 @@
   </section>
   <section class="vendors container">
     <h2 class="visually-hidden">Производители</h2>
-    <a href="https://www.dji.com/" target="_blank"><img src="img/logo-1.jpg" width="260" height="100" alt="DJI" target="_blank"></a>
-    <a href="http://www.sp-gadgets.com/en/" target="_blank"><img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets" target="_blank"></a>
-    <a href="https://gopro.com/" target="_blank"><img src="img/logo-3.jpg" width="260" height="100" alt="GoPro"target="_blank"></a>
-    <a href="https://www.vive.com/ru/" target="_blank"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"target="_blank"></a>
+    <a href="https://www.dji.com/" target="_blank"><img src="img/logo-1.jpg" width="260" height="100" alt="DJI" ></a>
+    <a href="http://www.sp-gadgets.com/en/" target="_blank"><img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets"></a>
+    <a href="https://gopro.com/" target="_blank"><img src="img/logo-3.jpg" width="260" height="100" alt="GoPro"></a>
+    <a href="https://www.vive.com/ru/" target="_blank"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a>
   </section>
   <div class="container flex-wrapper">
     <section class="about-us">
