--- a/index.html
+++ b/index.html
@@ -3,44 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <title>Device - Главная</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
       <section class="user-block">
-        <form class="search-form" action="url" method="get">
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <input type="search" name="search-field" placeholder="Поиск по сайту">
           <button type="submit" name="search">Найти</button>
         </form>
-        <a class="log-in" href="#">Войти</a>
-        <p class="cart-section">
+        <div class="user-section">
+          <p><a class="user" href="#">Войти</a></p>
           <a class="compare" href="#">Сравнить</a>
           <a class="cart" href="#">Корзина</a>
-        </p>
+        </div>
       </section>
       <nav class="main-nav">
-        <ul>
-          <li class="logo"><img src="img/logo.svg" width="163" height="35" alt="Device"></li>
-          <li>
-            <button class="main-nav-submenu-open label" type="button">Каталог товаров</button>
-            <div class="main-nav-submenu">
-              <ul>
-                <li class="main-nav-submenu-column">
-                  <a href="#">Виртуальная реальность</a>
-                  <a href="#">Моноподы для селфи</a>
-                  <a href="#">Экшн-камеры</a>
-                </li>
-                <li class="main-nav-submenu-column">
-                  <a href="#">Фитнес-браслеты</a>
-                  <a href="#">Умные часы</a>
-                </li>
-                <li class="main-nav-submenu-column">
-                  <a href="#">Квадрокоптеры</a>
-                </li>
-              </ul>
-            </div>
-          </li>
+        <div class="logo"><img src="img/logo.svg" width="163" height="35" alt="Device"></div>
+        <div class="main-nav-wrapper">
+          <button class="main-nav-submenu-open label" type="button">Каталог товаров</button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+            <path fill="#272525" fill-opacity="0.3" d="M16 7H9V0H7v7H0v2h7v7h2V9h7z"/>
+          </svg>
+          <div class="main-nav-submenu">
+            <ul>
+              <li class="main-nav-submenu-column">
+                <a href="#">Виртуальная реальность</a>
+                <a href="#">Моноподы для селфи</a>
+                <a href="#">Экшн-камеры</a>
+              </li>
+              <li class="main-nav-submenu-column">
+                <a href="#">Фитнес-браслеты</a>
+                <a href="#">Умные часы</a>
+              </li>
+              <li class="main-nav-submenu-column">
+                <a href="#">Квадрокоптеры</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <ul class=main-nav-menu>
           <li class="label"><a href="#">Доставка</a></li>
           <li class="label"><a href="#">Гарантия</a></li>
           <li class="label"><a href="#">Контакты</a></li>
@@ -52,17 +55,15 @@
     <input class="visually-hidden" type="radio" name="slider-switch" id="product-1" checked>
     <input class="visually-hidden" type="radio" name="slider-switch" id="product-2">
     <input class="visually-hidden" type="radio" name="slider-switch" id="product-3">
-    <div class="product-slider-switch">
-      <label for="product-1">1</label>
-      <label for="product-2">2</label>
-      <label for="product-3">3</label>
-    </div>
     <ol>
       <li class="product-slide slide-1">
         <div class="image-wrapper">
           <img src="img/slider-1.png" width="384" height="486" alt="Селфи-палка 8 м">
         </div>
         <div class="text-wrapper">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
+            <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
+          </svg>
           <h2 class="heading">Делай селфи, <br>как Бен Стиллер!</h2>
           <p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a href="#" class="btn">Подробнее</a>
@@ -85,8 +86,11 @@
           <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
         </div>
         <div class="text-wrapper">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
+            <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
+          </svg>
           <h2 class="heading">Худеем <br>правильно!</h2>
-          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
+          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a href="#" class="btn">Подробнее</a>
           <table class="basic-features">
             <tr class="values">
@@ -103,8 +107,11 @@
           <img src="img/slider-3.png" width="526" height="334" alt="Селфи-палка 8 м">
         </div>
         <div class="text-wrapper">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
+            <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
+          </svg>
           <h2 class="heading">Порхает как бабочка, жалит как пчела!</h2>
-          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, <br>замаскированным под стандартную камеру.</p>
+          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a href="#" class="btn">Подробнее</a>
           <table class="basic-features">
             <tr class="values">
@@ -119,12 +126,17 @@
         </div>
       </li>
     </ol>
+    <div class="product-slider-switch">
+      <label for="product-1"><span class="visually-hidden">1</span></label>
+      <label for="product-2"><span class="visually-hidden">2</span></label>
+      <label for="product-3"><span class="visually-hidden">3</span></label>
+    </div>
   </section>
   <section class="container">
     <h2 class="visually-hidden">Популярные товары</h2>
     <ul class="popular-list">
       <li><a href="#">Виртуальная реальность</a></li>
-      <li><a href="#">Моноподы для селфи</a></li>
+      <li><a href="#">Моноподы для&#160;селфи</a></li>
       <li><a href="#">Экшн-камеры</a></li>
       <li><a href="#">Фитнес-браслеты</a></li>
       <li><a href="#">Умные часы</a></li>
@@ -169,6 +181,9 @@
   </section>
   <div class="container flex-wrapper">
     <section class="about-us">
+      <svg xmlns="http://www.w3.org/2000/svg" width="80" height="7" viewBox="0 0 80 7">
+        <rect fill="#000000" x="0" y="0" width="80" height="7"/>
+      </svg>
       <h2 class="heading">О нас</h2>
       <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
       <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
@@ -180,25 +195,34 @@
       <a href="#" class="btn">Подробнее о нас</a>
     </section>
     <section class="contacts">
+      <svg xmlns="http://www.w3.org/2000/svg" width="80" height="7" viewBox="0 0 80 7">
+        <rect fill="#000000" x="0" y="0" width="80" height="7"/>
+      </svg>
       <h2 class="heading">Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <p><img src="img/map.jpg" width="560" height="222" alt=""></p>
-      <button class="btn" type="button">Напишите нам</button>
-      <section class="write-us">
+      <a class="map-open" href="#"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
+      <section class="modal modal-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="960" height="559" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть карту</span</button>
+      </section>
+      <button class="btn feedback-open" type="button">Напишите нам</button>
+      <section class="modal modal-write-us">
         <h2 class="visually-hidden">Форма обратной связи</h2>
-        <form method="post">
-          <p class="write-us-name">
-            <label>Ваше имя: <br><input type="text" placeholder="Представьтесь, пожалуйста"></label>
-          </p>
-          <p class="write-us-email">
-            <label>Ваш e-mail: <br><input type="email" placeholder="Для отправки ответа"></label>
-          </p>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <div class="flex-wrapper">
+            <p class="write-us-name">
+              <label>Ваше имя: <br><input type="text" name="name" placeholder="Представьтесь, пожалуйста"></label>
+            </p>
+            <p class="write-us-email">
+              <label>Ваш e-mail: <br><input type="email" name="email" placeholder="Для отправки ответа"></label>
+            </p>
+          </div>
           <p class="write-us-message">
-            <label>Текст письма: <br><textarea rows="7" placeholder="В свободной форме"></textarea></label>
+            <label>Текст письма: <br><textarea rows="7" name="message" placeholder="В свободной форме"></textarea></label>
           </p>
           <button class="btn" type="submit">Отправить</button>
         </form>
-        <button class="write-us-close" type="button">Закрыть форму</button>
+        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть форму</span</button>
       </section>
     </section>
   </div>
@@ -206,15 +230,13 @@
     <div class="container">
       <div class="flex-wrapper">
         <div class="logo"><img src="img/logo-footer.svg" width="163" height="35" alt="Device"></div>
-        <div class="footer-user-area">
-          <p class="user-block"><a href="#">Войти</a></p>
-          <p>
-            <a class="compare" href="#">Сравнить</a>
-            <a class="cart" href="#">Корзина</a>
-          </p>
+        <div class="footer-user-section">
+          <a class="user" href="#">Войти</a>
+          <a class="compare" href="#">Сравнить</a>
+          <a class="cart" href="#">Корзина</a>
         </div>
       </div>
-      <div class="footer-menu-area">
+      <div class="footer-menu-section">
         <p>г. Москва, ул. Строителей, 15</p>
         <p class="footer-menu">
           <a class="label" href="#">Доставка</a>
@@ -223,15 +245,21 @@
         </p>
         <p>Тел.: +7 (495) 495-95-95</p>
       </div>
-      <div class="footer-social-area">
-        <p>
-          <a class="social social-fb" href="#">Facebook</a>
-          <a class="social social-in" href="#">Instagram</a>
-          <a class="social social-tw" href="#">Twitter</a>
+      <div class="footer-social-section">
+        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="7" viewBox="0 0 80 7">
+          <rect fill="#ffc600" x="0" y="0" width="80" height="7"/>
+        </svg>
+        <p class="social">
+          <a class="social-fb" href="#"><span class="visually-hidden">Facebook</span></a>
+          <a class="social-in" href="#"><span class="visually-hidden">Instagram</span></a>
+          <a class="social-tw" href="#"><span class="visually-hidden">Twitter</span></a>
         </p>
-        <p><a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></p>
+        <p class="html-academy">
+          <a class="html-link" href="https://htmlacademy.ru/intensive/htmlcss"><span class="visually-hidden">HTML Academy</span></a>
+        </p>
       </div>
     </div>
   </footer>
+  <script src="js/popups.js" type="text/javascript"></script>
 </body>
 </html>
