--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <a class="map-open" href="#"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
       <section class="modal modal-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="960" height="559" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть карту</span</button>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="960" height="559" style="border:0" allowfullscreen></iframe>
+        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть карту</span></button>
       </section>
       <button class="btn feedback-open" type="button">Напишите нам</button>
       <section class="modal modal-write-us">
@@ -222,7 +222,7 @@
           </p>
           <button class="btn" type="submit">Отправить</button>
         </form>
-        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть форму</span</button>
+        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть форму</span></button>
       </section>
     </section>
   </div>
