--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Device - Главная</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
   <header class="main-header">
@@ -260,6 +260,6 @@
       </div>
     </div>
   </footer>
-  <script src="js/popups.js" type="text/javascript"></script>
+  <script src="js/popups.min.js" type="text/javascript"></script>
 </body>
 </html>
