--- a/catalog.html
+++ b/catalog.html
@@ -29,16 +29,16 @@
           <div class="main-nav-submenu">
             <ul>
               <li class="main-nav-submenu-column">
-                <a href="#">Виртуальная реальность</a>
+                <a href="catalog.html">Виртуальная реальность</a>
                 <a href="#">Моноподы для селфи</a>
-                <a href="#">Экшн-камеры</a>
+                <a href="catalog.html">Экшн-камеры</a>
               </li>
               <li class="main-nav-submenu-column">
-                <a href="#">Фитнес-браслеты</a>
-                <a href="#">Умные часы</a>
+                <a href="catalog.html">Фитнес-браслеты</a>
+                <a href="catalog.html">Умные часы</a>
               </li>
               <li class="main-nav-submenu-column">
-                <a href="#">Квадрокоптеры</a>
+                <a href="catalog.html">Квадрокоптеры</a>
               </li>
             </ul>
           </div>
@@ -68,13 +68,13 @@
         <div class="catalog-sort">
           <span class="label">Сортировка:</span>
           <p class="sort-categories">
-            <a href="#">По цене</a>
+            <a class="current-sort" href="#">По цене</a>
             <a href="#">По типу</a>
             <a href="#">По популярности</a>
           </p>
           <p class="ascending-descending">
-            <a class="ascending current-sort" href="#"><span class="visually-hidden">По возрастанию</span></a>
-            <a class="descending" href="#"><span class="visually-hidden">По убыванию</span></a>
+            <a class="ascending" href="#"><span class="visually-hidden">По убыванию</span></a>
+            <a class="descending current-sort" href="#"><span class="visually-hidden">По возрастанию</span></a>
           </p>
         </div>
       </div>
@@ -95,17 +95,17 @@
             <fieldset>
               <legend>Цвет</legend>
               <ul>
-                <li><input class="visually-hidden" type="checkbox" id="filter-color-black" value="black"><label for="filter-color-black">Чёрный</label></li>
-                <li><input class="visually-hidden" type="checkbox" id="filter-color-white" value="white"><label for="filter-color-white">Белый</label></li>
-                <li><input class="visually-hidden" type="checkbox" id="filter-color-blue" value="blue"><label for="filter-color-blue">Синий</label></li>
-                <li><input class="visually-hidden" type="checkbox" id="filter-color-red" value="red"><label for="filter-color-red">Красный</label></li>
-                <li><input class="visually-hidden" type="checkbox" id="filter-color-pink" value="pink"><label for="filter-color-pink">Розовый</label></li>
+                <li><input class="visually-hidden" type="checkbox" name="filter-color" id="filter-color-black" value="black" checked><label for="filter-color-black">Чёрный</label></li>
+                <li><input class="visually-hidden" type="checkbox" name="filter-color" id="filter-color-white" value="white"><label for="filter-color-white">Белый</label></li>
+                <li><input class="visually-hidden" type="checkbox" name="filter-color" id="filter-color-blue" value="blue" checked><label for="filter-color-blue">Синий</label></li>
+                <li><input class="visually-hidden" type="checkbox" name="filter-color" id="filter-color-red" value="red" checked><label for="filter-color-red">Красный</label></li>
+                <li><input class="visually-hidden" type="checkbox" name="filter-color" id="filter-color-pink" value="pink"><label for="filter-color-pink">Розовый</label></li>
               </ul>
             </fieldset>
             <fieldset>
               <legend>Bluetooth</legend>
               <ul>
-                <li><input class="visually-hidden" type="radio" name="bluetooth" id="bluetooth-yes"><label for="bluetooth-yes">Есть</label></li>
+                <li><input class="visually-hidden" type="radio" name="bluetooth" id="bluetooth-yes" checked><label for="bluetooth-yes">Есть</label></li>
                 <li><input class="visually-hidden" type="radio" name="bluetooth" id="bluetooth-no"><label for="bluetooth-no">Нет</label></li>
               </ul>
             </fieldset>
