--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
           <div class="main-nav-submenu">
             <ul>
               <li class="main-nav-submenu-column">
-                <a href="#">Виртуальная реальность</a>
-                <a href="#">Моноподы для селфи</a>
-                <a href="#">Экшн-камеры</a>
+                <a href="catalog.html">Виртуальная реальность</a>
+                <a href="catalog.html">Моноподы для селфи</a>
+                <a href="catalog.html">Экшн-камеры</a>
               </li>
               <li class="main-nav-submenu-column">
-                <a href="#">Фитнес-браслеты</a>
-                <a href="#">Умные часы</a>
+                <a href="catalog.html">Фитнес-браслеты</a>
+                <a href="catalog.html">Умные часы</a>
               </li>
               <li class="main-nav-submenu-column">
-                <a href="#">Квадрокоптеры</a>
+                <a href="catalog.html">Квадрокоптеры</a>
               </li>
             </ul>
           </div>
@@ -135,12 +135,12 @@
   <section class="container">
     <h2 class="visually-hidden">Популярные товары</h2>
     <ul class="popular-list">
-      <li><a href="#">Виртуальная реальность</a></li>
-      <li><a href="#">Моноподы для&#160;селфи</a></li>
-      <li><a href="#">Экшн-камеры</a></li>
-      <li><a href="#">Фитнес-браслеты</a></li>
-      <li><a href="#">Умные часы</a></li>
-      <li><a href="#">Квадрокоптеры</a></li>
+      <li><a href="catalog.html">Виртуальная реальность</a></li>
+      <li><a href="catalog.html">Моноподы для&#160;селфи</a></li>
+      <li><a href="catalog.html">Экшн-камеры</a></li>
+      <li><a href="catalog.html">Фитнес-браслеты</a></li>
+      <li><a href="catalog.html">Умные часы</a></li>
+      <li><a href="catalog.html">Квадрокоптеры</a></li>
     </ul>
   </section>
   <section class="services-slider">
