Третья финальная итерация

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Device - Главная</title>
+  <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
@@ -65,7 +66,7 @@
             <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
           </svg>
           <h2 class="heading">Делай селфи, <br>как Бен Стиллер!</h2>
-          <p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь&#160;(Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a href="#" class="btn">Подробнее</a>
           <table class="basic-features">
             <tr class="values">
@@ -200,12 +201,12 @@
       </svg>
       <h2 class="heading">Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a class="map-open" href="#"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
+      <a class="map-open" href="map.html"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
       <section class="modal modal-map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="960" height="559" style="border:0" allowfullscreen></iframe>
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть карту</span></button>
       </section>
-      <button class="btn feedback-open" type="button">Напишите нам</button>
+      <a class="btn feedback-open" href="feedback.html">Напишите нам</a>
       <section class="modal modal-write-us">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <form action="https://echo.htmlacademy.ru" method="post">
