--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Device - Каталог</title>
+  <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
